# Cucinomicon

book/: TODO.md  front_matter.yml
book/introduction/: prologue.md  thanks.md  warnings.md  zen.md
book/recipes/: reginette.md
build-book/: Cargo.toml
build-book/src/: lib.rs  main.rs
build-book/src/book/: front_matter.rs  introduction.rs  mod.rs  zen.rs
build-book/src/book/recipe/: mod.rs
build-book/src/parsers/: headed_md.rs  humantime_duration.rs  markdown.rs  mod.rs  string_or_struct.rs  title_separated_list.rs
generate/: Cargo.toml
generate/src/: lib.rs
generate/src/book/: mod.rs  zen.rs
