[package]
name = "build-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
either = { version = "1.9.0", features = ["serde"] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
lazy-regex = "3.0.0"
log = "0.4.19"
markdown = { version = "1.0.0-alpha.11", features = ["log", "serde"] }
serde = { version = "1.0.174", features = ["derive"] }
serde-email = "2.1.0"
serde_yaml = "0.9.25"
simple_logger = "4.2.0"
url = { version = "2.4.0", features = ["serde"] }
